# shopyo-factory

./: .gitignore  README.md  cookiecutter.json  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
hooks/: post_gen_project.py
pip-wheel-metadata/shopyo_facotry.dist-info/: METADATA
requirements/: dev.in  dev.txt  tests.txt
tests/: conftest.py  test_bake_cookie.py
{{cookiecutter.project_slug}}/: pyproject.toml  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: tests.yml
{{cookiecutter.project_slug}}/doc_options/mkdocs/docs/: mkdocs.yml
{{cookiecutter.project_slug}}/doc_options/sphinx/docs/: conf.py  index.rst
{{cookiecutter.project_slug}}/requirements/: docs.in
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: app.py  cli.py  cli_helper.py  config_demo.json  conftest.py  database.py  manage.py  models.py  wsgi.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/modules/box__bizhelp/appointment/: models.py  view.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/modules/box__bizhelp/contact/: models.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/modules/box__bizhelp/page/: models.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/modules/box__bizhelp/people/: models.py  view.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/modules/box__default/appadmin/: admin.py  view.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/modules/box__default/appadmin/tests/: test_admin.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/modules/box__default/auth/: models.py  upload.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/modules/box__default/auth/templates/auth/: register.html  shop_login.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/modules/box__default/auth/tests/: factories.py  test_auth_functional.py  test_auth_models.py  test_email.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/modules/box__default/base/templates/base/: module_base.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/modules/box__default/dashboard/: view.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/modules/box__default/settings/: helpers.py  models.py  upload.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/modules/box__default/theme/: global.py  view.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/modules/www/: view.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/tests/: conftest.py  test_cli.py
