[metadata]
# replace with your username:
name = shopyo-facotry
version = 0.1.0
url = https://shopyo.readthedocs.io/en/latest/
project_urls =
    Source Code = https://github.com/shopyo/shopyo-facotry
    Issue Tracker = https://github.com/shopyo/shopyo-facotry/issues
    Changelog = https://github.com/shopyo/shopyo-facotry/blob/dev/CHANGES.md
    Twitter = https://twitter.com/shopyoproject

license = MIT
author = Abdur-Rahmaan Janhangeer and Shamsuddin Rehmani
author_email = arj.python@gmail.com
description = flask full stack boilerplate app generator
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Flask, Django, web framework, modular, cookiecutter
classifiers =
    Environment :: Web Environment
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Development Status :: 2 - Pre-Alpha

[options]
include_package_data = true
python_requires = >=3.6

[tool:pytest]
testpaths = tests